--- a/package.json
+++ b/package.json
@@ -18,15 +18,17 @@
     "author": "Jim Horn <jim@jdhorn.com> (https://www.jdhorn.com)",
     "license": "ISC",
     "dependencies": {
-        "parcel-bundler": "^1.12.4",
-        "prettier": "^2.1.2",
-        "pretty-quick": "3.1.0",
-        "react": "^17.0.0",
-        "react-dom": "17.0.0"
+        "react": "18.2.0",
+        "react-dom": "18.2.0"
     },
     "devDependencies": {
+        "@parcel/transformer-sass": "2.8.1",
         "husky": "4.3.0",
-        "rimraf": "^3.0.2",
+        "parcel": "2.8.1",
+        "prettier": "2.8.1",
+        "pretty-quick": "3.1.3",
+        "process": "^0.11.10",
+        "rimraf": "3.0.2",
         "sass": "1.27.0"
     }
 }
